fix: Use proper reflection for Linux WM_CLASS (known Java issue)
- Add --add-opens java.desktop/sun.awt.X11=ALL-UNNAMED JVM arg
- Set awtAppClassName on toolkit instance (not static field)
- This is the documented fix for Java/Compose Desktop on Linux

The WM_CLASS issue is a known problem with Java AWT on Linux.
The reflection must happen after toolkit creation but before windows.

🤖 Generated with [Claude Code](https://claude.com/claude-code)